# PartaTest

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  spec.yaml
parta/: manage.py
parta/parta/: asgi.py  settings.py  urls.py  wsgi.py
parta/school_bucket/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
parta/school_bucket/migrations/: 0001_initial.py
